@@ -221,9 +221,9 @@ public abstract class Properties implements java.io.Serializable
      * @throws ParseException if the specified <code>s</code> string cannot be parsed as a <code>Double</code>
      */
     Double betterDoubleValueOf(String s) throws ParseException
-    	{
+        {
         return Double.valueOf( format.parse(s).doubleValue() );
-    	}
+        }
     
     /*
       f = new JFrame();
